--- a/verslag.tex
+++ b/verslag.tex
@@ -23,7 +23,7 @@
 \maketitle
 
 \begin{abstract}
-\lipsum[2-3]
+\lipsum[2-3] %voorbeeldtekst
 \end{abstract}
 
 \tableofcontents
@@ -32,11 +32,7 @@
 \lipsum
 
 \chapter{Theorie}
-\lipsum[2]
-\section{Basis}
-\lipsum[5-6]
-\section{Verder}
-\lipsum[7]
+\lipsum[2] 
 
 \chapter{Resultaten}
 \lipsum[2]
@@ -48,6 +44,5 @@
 
 \chapter{Experimenten}
 \lipsum[2]
-
 
 \end{document}
