Update and rename complatex.tex to demo-complatex.tex

--- a/demo-complatex.tex
+++ b/demo-complatex.tex
@@ -28,8 +28,8 @@ Schrijf een samenvatting van hoogstens een halve bladzijde waarin je kort uitleg
 \chapter{Inleiding}
 Vertel iets over je artikel, noem je vraagstelling. Richt je tekst op medestudenten. (Richtlijn 2 bladzijden).
 
-\chapter{Theorie}
-Wanneer je extra theorie hebt gebruikt kun je die hier uitleggen. Je mag hoofdstuk 1 en 2 samenvoegen.
+\chapter{Aanpak}
+Beschrijf je aanpak voor de Mathematica-experimenten. Wanneer je extra theorie hebt gebruikt kun je die hier ook uitleggen. 
 
 \chapter{Resultaten}
 Aanpak en uitkomsten van je Mathematica-experimenten. (Richtlijn 2 bladzijden).
